--- a/templates/index.html
+++ b/templates/index.html
@@ -32,5 +32,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  </body>
+    <div style="text-align: center; margin-top: 20px;">
+        Designed, Developed and Maintained by <a href="https://www.linkedin.com/in/srinath-vallimanalan/" target="_blank">Srinath Vallimanalan</a>
+    </div>
+    </body>
 </html>
